@@ -38,6 +38,9 @@
 <p>2015-05-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/tempfile.c (AcquireTemporaryFileDescriptor): Thoroughly
+vet temporary file path.  Might quiet Coverity 64613 &quot;Use of
+untrusted string value&quot;.</li>
 <li>wand/magick_compat.c (ParseGeometry): Another try at quieting
 Coverity 10248 &quot;Copy into fixed size buffer&quot; and 10078
 &quot;Overlapping buffer in memory copy&quot; in this dead code.</li>
